@@ -8,6 +8,8 @@ Change log for zeit.web
 
 - ZON-2159: Nestle ranking area closer up to cms code
 
+- ZON-2399: Check if ad-nextread folder contains items, not just if it's there
+
 - FIX: rework ZMO galleries (back to normal)
 
 - HOTFIX: Render a redirect if we have a call to a dynamic folder with an empty
